--- a/Comuni/app/src/main/res/layout/activity_detalle_evento.xml
+++ b/Comuni/app/src/main/res/layout/activity_detalle_evento.xml
@@ -5,14 +5,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jonathan.comuni.Ver_eventos">
-
-
-    <ListView
-        android:id="@+id/lista_eventos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
-
+    tools:context="com.example.jonathan.comuni.Detalle_evento">
 
 </RelativeLayout>
-
