--- a/Comuni/app/src/main/res/layout/activity_registro.xml
+++ b/Comuni/app/src/main/res/layout/activity_registro.xml
@@ -28,7 +28,6 @@
                 />
 
             <TextView
-                android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/email"
@@ -39,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:ems="10"
-                android:id="@+id/editText2" />
+                android:id="@+id/edit_email" />
 
             <TextView
                 android:id="@+id/nombre"
@@ -109,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
-                android:id="@+id/editText3"
+                android:id="@+id/edit_telefono"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
