--- a/Comuni/app/src/main/res/layout/activity_main.xml
+++ b/Comuni/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,15 @@
                 android:id="@+id/logo"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
-                android:src="@drawable/logo_prueba"
+                android:src="@drawable/logo_comuni"
                 android:layout_gravity="center"
                 />
 
             <EditText
-                android:id="@+id/usuario"
+                android:id="@+id/edit_emailMain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/usuario"
+                android:hint="@string/email"
                 />
             <EditText
                 android:id="@+id/contraseña"
