--- a/Comuni/app/src/main/res/layout/activity_solicitar_evento.xml
+++ b/Comuni/app/src/main/res/layout/activity_solicitar_evento.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jonathan.comuni.Solicitar_evento"
     android:orientation="vertical"
-    >
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/mandar_solicitud"
@@ -78,5 +78,36 @@
         android:id="@+id/edit_descripcion_evento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hora Inicio" />
+
+    <EditText
+        android:id="@+id/hora_inicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="HH:MM:SS" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hora termino" />
+
+    <EditText
+        android:id="@+id/hora_termino"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="HH:MM:SS" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aceptar"
+        android:id="@+id/aceptar_evento"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
