--- a/Comuni/app/src/main/res/layout/activity_detalle_evento.xml
+++ b/Comuni/app/src/main/res/layout/activity_detalle_evento.xml
@@ -1,126 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.jonathan.comuni.Detalle_evento">
+    tools:context="com.example.jonathan.comuni.Detalle_evento"
+    android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Descripción :"
-        android:id="@+id/textView2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="48dp" />
+            <ImageView
+                android:id="@+id/imagen_evento"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/cicletada"
+                android:layout_gravity="center"
+                />
+            <TextView
+                android:id="@+id/titulo_evento_detallada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Cicletada"
+                android:textSize="25sp"
+                android:layout_marginBottom="10dp"
+                />
+            <TextView
+                android:id="@+id/descripcion_evento_detallada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="se hara una cicletada en beneficio de tal persona"
+                android:layout_marginBottom="5dp"
+                />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/cicletada"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp" />
+            <TextView
+                android:id="@+id/direccion_evento_detallada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="direccion tanto tanto"
+                android:layout_marginBottom="5dp"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Comuna: "
-        android:id="@+id/textView"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/hora_inicio_evento_detallado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="hora de inicio tanto"
+                android:layout_marginBottom="5dp"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Dirección:"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TextView
+                android:id="@+id/hora_termino_evento_detallado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="hora de termino tanto"
+                android:layout_marginBottom="20dp"
+                />
+            <TextView
+                android:id="@+id/comentarios_evento_detallado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="soy un comentario"
+                android:layout_marginBottom="5dp"
+                />
+            <EditText
+                android:id="@+id/dejar_comentarios_evento_detallado"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="dejar comentario"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Hora de inicio:"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/hora_inicio"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="fecha:"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/fecha"
-        android:layout_below="@+id/textView4"
-        android:layout_toRightOf="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/descripcion"
-        android:layout_above="@+id/textView"
-        android:layout_toRightOf="@+id/textView2"
-        android:layout_toEndOf="@+id/textView2" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/titulo"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/hora_inicio"
-        android:layout_toEndOf="@+id/hora_inicio" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/Comuna"
-        android:layout_above="@+id/textView3"
-        android:layout_toRightOf="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/direccion"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/Comuna"
-        android:layout_toEndOf="@+id/Comuna" />
-
-</RelativeLayout>
+            <Button
+                android:id="@+id/comentar_evento_detallado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="comentar"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
